--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
+    "@angular/fire": "^0.0.0",
     "@angular/forms": "^16.0.0",
     "@angular/material": "^16.0.1",
     "@angular/platform-browser": "^16.0.0",
